--- a/Snippets/QuickProspect.cmp
+++ b/Snippets/QuickProspect.cmp
@@ -1,8 +1,7 @@
 <aura:component controller="QuickProspectApexController" 
-		     implements="force:appHostable,force:lightningQuickActionWithoutHeader,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,force:hasSObjectName" access="global">
+		     implements="force:lightningQuickActionWithoutHeader,flexipage:availableForRecordHome,force:hasRecordId" access="global">
     <aura:attribute name="recordId" type="Id" />
     <aura:attribute name="sObjectName" type="String" />
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <lightning:card iconName="utility:user" title="Quick Prospect">
         <div class="slds-text-align--left slds-p-around--medium">
             <lightning:input aura:id="firstname" name="firstname" label="First Name" required="true" />
