--- a/Snippets/BusinessLocator.cmp
+++ b/Snippets/BusinessLocator.cmp
@@ -1,14 +1,14 @@
 <aura:component controller="BusinessLocatorApexController" implements="force:appHostable, flexipage:availableForAllPageTypes, flexipage:availableForRecordHome, force:hasRecordId" access="global">
     <aura:attribute name="recordId" type="Id" />
     <aura:attribute name="defaultSearch" type="String" default="Restaurants" />
-    <aura:attribute name="location" type="Object" default='{"coords":{"latitude":37.7938462, "longitude":-122.3970253}}' />
+    <aura:attribute name="location" type="Object" />
     <aura:attribute name="restaurantList" type="Object" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <div class="slds">
         <div class="slds-box" aura:id="main">
             <div aura:id="panelList">
                 <header>
-                    <h2 class="slds-text-heading--small slds-m-bottom--small">In the Area</h2>
+                    <h2 class="slds-text-heading--small slds-m-bottom--small">Business Locator</h2>
                     <div class="slds-form-element">
                         <label class="slds-form-element__label slds-assistive-text" for="searchBox">Search</label>
                         <div class="slds-form-element__control">
