--- a/Snippets/BusinessLocator_start.cmp
+++ b/Snippets/BusinessLocator_start.cmp
@@ -1,11 +1,28 @@
-<aura:component implements="force:appHostable, flexipage:availableForAllPageTypes, flexipage:availableForRecordHome, force:hasRecordId" access="global">
+<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,force:hasSObjectName" access="global" >
+
+<!-- 
+    <aura:set attribute="auraPreInitBlock">
+            <auraStorage:init name="actions" 
+                persistent="false" 
+                secure="false" 
+                clearStorageOnInit="true"
+                defaultExpiration="50"
+                defaultAutoRefreshInterval="60"
+                maxSize="1024" 
+                version="1.0"/>
+    </aura:set>  
+-->      
     <aura:attribute name="recordId" type="Id" />
-    <aura:attribute name="defaultSearch" type="String" default="Restaurants" />
+    <aura:attribute name="sObjectName" type="String" />
+    <aura:attribute name="defaultSearch" type="String" default="Sushi"/>
+    <aura:attribute name="designHeight" type="String" />
     <aura:attribute name="location" type="Object" />
     <aura:attribute name="restaurantList" type="Object" />
+    <aura:attribute name="openItem" type="String" />
+    <aura:attribute name="errorMessage" type="String" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
-    <div class="slds">
-        <div class="slds-box" aura:id="main">
+    <aura:handler name="change" value="{!v.location}" action="{!c.updateSearch}" />
+        <div class="slds-box small" aura:id="main">
             <div aura:id="panelList">
                 <header>
                     <h2 class="slds-text-heading--small slds-m-bottom--small">Business Locator</h2>
@@ -16,17 +33,39 @@
                         </div>
                     </div>
                 </header>
-                <div aura:id="scrollableArea">
+                <p class="slds-hide" aura:id="warning">{!v.errorMessage}</p>
+                <div class="slds-scrollable--y scroll-container" aura:id="scrollableArea">
+                    <div aura:id="map" class="map"></div>
                     <ul class="slds-list--vertical slds-has-dividers--top-space">
                         <aura:iteration items="{!v.restaurantList}" var="item" indexVar="i">
                             <li class="slds-list__item" onclick="{!c.showDetails}" data-record="{!i}">
                                 <h3 class="slds-text-heading--small slds-m-bottom--x-small">{!item.name}</h3>
                                 <img src="{!item.ratingImg}" alt="" class="ratingStars" />
+                                <div class="slds-hide slds-m-top--medium" data-details="{!i}">
+                                    <ul class="slds-list--vertical">
+                                        <li class="slds-list__item">{!item.address}</li>
+                                        <li class="slds-list__item">{!item.city}, {!item.state}</li>
+                                        <li class="slds-list__item">{!item.phone}</li>
+                                    </ul>
+                                    <div class="slds-media slds-m-top--medium">
+                                        <div class="slds-media__figure">
+                                            <img src="{!item.image}" class="slds-avatar--large slds-avatar--circle" alt="Placeholder" />
+                                        </div>
+                                        <div class="slds-media__body">
+                                            <p>{!item.review}</p>
+                                        </div>
+                                    </div>                          
+                                </div>
                             </li>
                         </aura:iteration>
                     </ul>
                 </div>
             </div>
+            <div class="slds-spinner_container" aura:id="spinner">
+                <div class="slds-spinner--brand slds-spinner slds-spinner--medium" aria-hidden="false" role="alert">
+                    <div class="slds-spinner__dot-a"></div>
+                    <div class="slds-spinner__dot-b"></div>
+                </div>
+            </div>
         </div>
-    </div>
 </aura:component>
